# foodfy-rust-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yml
.sqlx/: query-34271000b94491d93098c7e84559eb0002c2ddbc32d8820200fd1cb37a5f9321.json  query-3d3b34ccbe614f717576e2d7bfbe79ac1ad8eb10b773df5e8e394fd766f5e3b3.json  query-ba38210b5612c22332ce2b8b5af38d5e350acc8b2a1111580440fa0994d7b601.json
src/: main.rs
src/controllers/: status.rs
src/routes/: mod.rs  status.rs
