[package]
name = "foodfy-rust-api"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "chrono",
    "postgres",
    "macros",
] }
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
axum-test-helpers = "0.7.5"
